# DeepSeek-Reasonix

./: AGENTS.md  CLAUDE.md
crates/reasonix-render/: Cargo.toml
crates/reasonix-render/src/: decode_only.rs  editor.rs  frame_cache.rs  integrated.rs  lib.rs  main.rs  render.rs  scene.rs  state.rs  theme.rs  view.rs
crates/reasonix-render/src/whole_screen/: approval.rs  boot.rs  demo.rs  dock.rs  markdown.rs  md_render.rs  mod.rs  mode_picker.rs  overlay.rs  overlay_at.rs  paint.rs  selection.rs  sidebar.rs  theme.rs
crates/reasonix-render/src/whole_screen/cards/: diff.rs  message.rs  mod.rs  notify.rs  output.rs  todo.rs  tool.rs
crates/reasonix-render/tests/: decode_only.rs  render.rs  view.rs  whole_screen.rs
dashboard/: app.css
desktop/: package-lock.json  package.json
desktop/src/: App.tsx  CodeView.tsx  CommandPalette.tsx  Markdown.tsx  icons.tsx  main.tsx  protocol.ts  styles.css  theme.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
docs/: configuration.html
scripts/: smoke-rust.ps1
src/: config.ts  context-manager.ts  loop.ts  skills.ts  tokenizer.ts
src/cli/: heap-limit-launch.ts  index.ts  (+1 more)
tests/: code-prompt.test.ts  config.test.ts  ctx-breakdown.test.ts  dashboard-mcp-spec.test.ts  filesystem-tools.test.ts  loop-user-persist.test.ts  loop.test.ts  mcp-normalize-config.test.ts  proxy.test.ts  reducer-cards-elide.test.ts  scene-trace-frame.test.ts  shell-tools.test.ts  skills.test.ts  subagent.test.ts  tokenizer.test.ts  tools-skills.test.ts  ui-reducer.test.ts  ui-status-row-balance.test.tsx  web-tools.test.ts
(+58 files in other folders)
