[package]
name = "reasonix-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1"
arboard = { version = "3", default-features = false }
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.29"
pulldown-cmark = { version = "0.13", default-features = false }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
